<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/play"
        android:id="@+id/buttonPlay"
        android:layout_alignTop="@+id/buttonPause"
        android:layout_toLeftOf="@+id/buttonPause"
        android:layout_toStartOf="@+id/buttonPause"
        android:textSize="15sp"
        android:onClick="metodoPlay" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pause"
        android:id="@+id/buttonPause"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textSize="15sp"
        android:onClick="metodoPause" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cue"
        android:id="@+id/buttonCue"
        android:layout_alignTop="@+id/buttonPause"
        android:layout_toRightOf="@+id/buttonPause"
        android:layout_toEndOf="@+id/buttonPause"
        android:textSize="15sp"
        android:onClick="metodoCue" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="ModuMix"
        android:id="@+id/tvTitle"
        android:editable="false"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:enabled="true"
        android:textSize="30sp"
        android:textStyle="bold" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/volmas"
        android:id="@+id/volMas"
        android:layout_above="@+id/buttonPlay"
        android:layout_toLeftOf="@+id/buttonPause"
        android:onClick="volumenMas" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/volmenos"
        android:id="@+id/volMenos"
        android:onClick="volumenMenos"
        android:layout_above="@+id/buttonCue"
        android:layout_toRightOf="@+id/buttonPause" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/browse"
        android:id="@+id/buttonBrowse"
        android:layout_above="@+id/buttonPause"
        android:layout_centerHorizontal="true"
        android:onClick="browse"
        />

    <LinearLayout
        android:id="@+id/eqLayout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/tvTitle"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/volMas">
    </LinearLayout>

</RelativeLayout>
